src/app/globals.css
:root {
  --primary-color: #0f81b2;
  --secondary-color: #6be265;
  --black: #191919;
  --blue: #2e45bbbe;
  --purple: #3c2ebb;
  --green: #53e07dbd;
  --pink-red: #f6405d;
  --light-pink-red: #f8e3e7;
  --light-purple: #f1b9ff;
  --light-green-yellow: #f0ffb9;
  --light-green: #b9ffc5;
  --light-blue: #b9d1ff;

  --red-c-50: "#FFEBEE",
  --red-c-100: "#FFD7DD",
  --red-c-200: "#FEAEBC",
  --red-c-300: "#FE869A",
  --red-c-400: "#FD5D78",
  --red-c-500: "#FD3454",
  --red-c-600: "#F2022A",
  --red-c-700: "#B60220",
  --red-c-800: "#790115",
  --red-c-900: "#3D010B",
  --red-c-950: "#1E0005"
  
  --green-gradient: linear-gradient(to right, var(var(--green)), #68e7c5);
  --light-green-gradient: linear-gradient(to bottom, #e7ffeef3, #f0fdfdec);
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

html,
body {
  max-width: 100vw;
}

body {
  line-height: 1.6;
}

h1 {
  font-size: 3rem;
  font-weight: 800;
}

h2 {
  font-size: 2rem;
  font-weight: bold;
}

h3 {
  font-size: 1.5rem;
  font-weight: bold;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
}

:is(h1,h2,h3,h4,h5,h6) {
  text-wrap: balance;
}

:is(p,li, a) {
  text-wrap: pretty;
}

:is(h1,h2,h3,p,li) {
  color: var(--black);
}

